[project]
name = "hledger-python-lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Rafael Gabriel Arceo", email = "arceo.rafaelgabriel@protonmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "duckdb>=1.4.4",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.0",
]
